--- a/app.html
+++ b/app.html
@@ -2,6 +2,7 @@
 <html {{ HTML_ATTRS }}>
   <head {{ HEAD_ATTRS }}>
     {{ HEAD }}
+    <script id="usercentrics-cmp" async data-eu-mode="true" data-settings-id="FGZKfe4Ptj2IIs" src="https://app.eu.usercentrics.eu/browser-ui/latest/loader.js"></script>
   </head>
   <body {{ BODY_ATTRS }}>
     {{ APP }}
